Fixing overlap with multiple modal dialogs

--- a/sass/_modal.scss
+++ b/sass/_modal.scss
@@ -19,7 +19,6 @@
     border-radius: 7px 7px 5px 5px;
     display: none;
     box-shadow: 2px 2px 6px rgba($gray-0, 0.8);
-    margin-top: 5%;
     position: absolute;
 
     .modal {
